--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -4,13 +4,13 @@
     "description": "Harbor UI with Clarity",
     "angular-cli": {},
     "scripts": {
-        "start": "ng serve --ssl 1 --ssl-key ssl/server.key --ssl-cert ssl/server.crt --host 0.0.0.0 --proxy-config proxy.config.json",
+        "start": "ng serve --aot --ssl true --ssl-key ssl/server.key --ssl-cert ssl/server.crt --host 0.0.0.0 --proxy-config proxy.config.json",
         "lint": "tslint \"src/**/*.ts\"",
         "lint:lib": "tslint \"lib/**/*.ts\"  -e \"lib/dist/**/*\" ",
         "test": "ng test --single-run",
         "pree2e": "webdriver-manager update",
         "e2e": "protractor",
-        "build": "ng build",
+        "build": "ng build --aot",
         "build:lib": "ng-packagr -p ./lib/ng-package.json"
     },
     "private": true,
