--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -11,6 +11,7 @@
         "pree2e": "webdriver-manager update",
         "e2e": "protractor",
         "build": "ng build --aot",
+        "release": "ng build --aot --prod",
         "build:lib": "ng-packagr -p ./lib/ng-package.json"
     },
     "private": true,
