--- a/src/ui_ng/lib/package.json
+++ b/src/ui_ng/lib/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "harbor-ui",
-    "version": "1.0-rc1",
-    "description": "Harbor shared UI components based on Clarity and Angular4",
-    "author": "VMware",
+    "name": "@harbor/ui",
+    "version": "1.0.0-rc2",
+    "description": "Harbor shared UI components based on Clarity and Angular6",
+    "author": "CNCF",
     "module": "index.js",
     "main": "bundles/harborui.umd.min.js",
     "jsnext:main": "index.js",
