fix unit test can not pass after upgrade to angular 6

--- a/src/ui_ng/tsconfig.json
+++ b/src/ui_ng/tsconfig.json
@@ -10,7 +10,7 @@
       "es2015",
       "dom"
     ],
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": [
