--- a/src/ui_ng/angular.json
+++ b/src/ui_ng/angular.json
@@ -14,7 +14,7 @@
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.json",
+            "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/images",
               "src/favicon.ico",
@@ -77,6 +77,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "tsConfig": "src/tsconfig.spec.json",
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
             "scripts": [
