--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -30,7 +30,7 @@
         "@clr/icons": "^0.12.0",
         "@clr/ui": "^0.12.0",
         "@ngx-translate/core": "^10.0.2",
-        "@ngx-translate/http-loader": "0.0.3",
+        "@ngx-translate/http-loader": "^3.0.1",
         "@types/jquery": "^2.0.41",
         "@webcomponents/custom-elements": "^1.1.3",
         "core-js": "^2.5.4",
@@ -38,14 +38,13 @@
         "mutationobserver-shim": "^0.3.2",
         "ngx-clipboard": "^11.1.1",
         "ngx-cookie": "^1.0.0",
-        "ngx-markdown": "1.5.2",
-        "rxjs": "^6.0.0",
-        "rxjs-compat": "^6.2.2",
+        "ngx-markdown": "^6.2.0",
+        "rxjs": "^6.3.1",
         "ts-helpers": "^1.1.1",
+        "tslib": "^1.9.0",
         "types": "^0.1.1",
         "web-animations-js": "^2.2.1",
-        "zone.js": "^0.8.26",
-        "tslib": "^1.9.0"
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.7.0",
