Implement gc UI
Signed-off-by: Meina Zhou <meinaz@vmware.com>

Fix error on packaging offline installer with Drone (#5931)

Signed-off-by: wang yan <wangyan@vmware.com>

--- a/src/portal/lib/tsconfig.lib.json
+++ b/src/portal/lib/tsconfig.lib.json
@@ -11,7 +11,7 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "importHelpers": true,
-      "types": [],
+      "typeRoots": ["node_modules/@types"],
       "lib": [
         "dom",
         "es2015"
