Reactor backend api for authrization
1. Change backend api
2. Change frontend api
3. Change the proxy config file

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/make/common/templates/nginx/nginx.http.conf
+++ b/make/common/templates/nginx/nginx.http.conf
@@ -46,6 +46,19 @@ http {
       proxy_request_buffering off;
     }
 
+    location /c/ {
+      proxy_pass http://core/c/;
+      proxy_set_header Host $$host;
+      proxy_set_header X-Real-IP $$remote_addr;
+      proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+
+      # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
+      proxy_set_header X-Forwarded-Proto $$scheme;
+      
+      proxy_buffering off;
+      proxy_request_buffering off;
+    }
+
     location /api/ {
       proxy_pass http://core/api/;
       proxy_set_header Host $$host;
@@ -59,8 +72,8 @@ http {
       proxy_request_buffering off;
     }
 
-    location ~ ^/(login|log_out|sendEmail|language|reset|userExists|reset_password|chartrepo) {
-      proxy_pass http://core/;
+    location /chartrepo/ {
+      proxy_pass http://core/chartrepo/;
       proxy_set_header Host $$host;
       proxy_set_header X-Real-IP $$remote_addr;
       proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
