--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ matrix:
   - go: "1.9.2"
     env:
     - APITEST_LDAP=true
-
+  - go: "1.9.2"
+    env:
+    - OFFLINE=true
 env:
   global:
     - POSTGRESQL_HOST: localhost
@@ -67,3 +69,4 @@ script:
   - if [ "$UTTEST" == true ]; then bash ./tests/travis/ut_run.sh $IP; fi
   - if [ "$APITEST_DB" == true ]; then bash ./tests/travis/api_run.sh DB $IP; fi
   - if [ "$APITEST_LDAP" == true ]; then bash ./tests/travis/api_run.sh LDAP $IP; fi
+  - if [ "$OFFLINE" == true ]; then bash ./tests/travis/distro_installer.sh; fi
