--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,7 @@ apt:
   - google-chrome-stable
   - google-chrome-beta
 before_install:
-- openssl aes-256-cbc -K $encrypted_ef84a9f8ed67_key -iv $encrypted_ef84a9f8ed67_iv
-  -in gskey.sh.enc -out ./gskey.sh -d
+- openssl aes-256-cbc -K $encrypted_ef84a9f8ed67_key -iv $encrypted_ef84a9f8ed67_iv -in gskey.sh.enc -out ./gskey.sh -d
 - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname
   -s`-`uname -m` > docker-compose
 - chmod +x docker-compose
