Remove unused Bootstrap from portal dependencies, add jQuery which was implicitly depended upon
Signed-off-by: Jeremy Wilken <gnomation@gnomeontherun.com>

--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -59,11 +59,11 @@
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
-        "bootstrap": "4.0.0-alpha.5",
         "codelyzer": "~4.2.1",
         "enhanced-resolve": "^3.0.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
+        "jquery": "^3.3.1",
         "karma": "~1.7.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-cli": "^1.0.1",
