--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ install:
   - go get -d github.com/docker/distribution
   - go get -d github.com/docker/libtrust
   - go get -d github.com/lib/pq
-  - go get github.com/golang/lint/golint
+  - go get golang.org/x/lint/golint
   - go get github.com/GeertJohan/fgt
 
 #  - sudo rm /usr/local/bin/docker-compose
