Enhance job and jobservice loggers to support multiple backends
Signed-off-by: Steven Zou <szou@vmware.com>

--- a/src/Gopkg.toml
+++ b/src/Gopkg.toml
@@ -103,3 +103,7 @@ ignored = ["github.com/vmware/harbor/tests*"]
 [[constraint]]
   name = "github.com/gocraft/work"
   version = "=0.5.1"
+
+[[constraint]]
+  name = "github.com/op/go-logging"
+  version = "1.0.0"
