Add new parameter ldap_group_membership_attribute, this parameter is used for LDAP group membership
Signed-off-by: roldancer <roldancer@gmail.com>

--- a/make/harbor.cfg
+++ b/make/harbor.cfg
@@ -5,7 +5,7 @@ _version = 1.6.0
 #The IP address or hostname to access admin UI and registry service.
 #DO NOT use localhost or 127.0.0.1, because Harbor needs to be accessed by external clients.
 #DO NOT comment out this line, modify the value of "hostname" directly, or the installation will fail.
-hostname = reg.mydomain.com
+hostname = hola.com
 
 #The protocol for accessing the UI and token/notification service, by default it is http.
 #It can be set to https if ssl is enabled on nginx.
@@ -68,6 +68,8 @@ email_insecure = false
 #Change the admin password from UI after launching Harbor.
 harbor_admin_password = Harbor12345
 
+# --------------------------------------------
+
 ##By default the auth mode is db_auth, i.e. the credentials are stored in a local database.
 #Set it to ldap_auth if you want to verify a user's credentials against an LDAP server.
 auth_mode = db_auth
@@ -111,6 +113,11 @@ ldap_group_gid = cn
 
 #The scope to search for ldap groups. 0-LDAP_SCOPE_BASE, 1-LDAP_SCOPE_ONELEVEL, 2-LDAP_SCOPE_SUBTREE
 ldap_group_scope = 2
+
+# ------------------------------------------------------
+# The membership attribute name AD/openldap=memberof Oracle=ismemberof
+ldap_group_membership_attribute = ismemberof
+# -------------------------------------------------------
 
 #Turn on or off the self-registration feature
 self_registration = on
