--- a/src/jobservice/config.yml
+++ b/src/jobservice/config.yml
@@ -29,11 +29,11 @@ job_loggers:
   - name: "FILE"
     level: "DEBUG"
     settings: # Customized settings of logger
-      base_dir: "/Users/szou/tmp/job_logs"
+      base_dir: "tmp/job_logs"
     sweeper:
       duration: 1 #days
       settings: # Customized settings of sweeper
-        work_dir: "/Users/szou/tmp/job_logs"
+        work_dir: "/tmp/job_logs"
 
 #Loggers for the job service
 loggers:
