--- a/tools/migration/Dockerfile
+++ b/tools/migration/Dockerfile
@@ -7,7 +7,7 @@ RUN tdnf distro-sync -y \
     && tdnf install -y sed shadow procps-ng gawk gzip sudo net-tools >> /dev/null\
     && groupadd -r -g 10000 mysql && useradd --no-log-init -r -g 10000 -u 10000 mysql \
     && tdnf install -y mariadb-server mariadb mariadb-devel python2 python2-devel python-pip gcc \
-    && linux-api-headers glibc-devel binutils zlib-devel openssl-devel postgresql >> /dev/null \
+    linux-api-headers glibc-devel binutils zlib-devel openssl-devel postgresql >> /dev/null \
     && pip install mysqlclient alembic psycopg2 \
     && mkdir /docker-entrypoint-initdb.d /docker-entrypoint-updatedb.d \
     && rm -fr /var/lib/mysql \
