Corrected DOCKERCMD to fix portal multistage build
Signed-off-by: Brett Johnson <brett@sdbrett.com>

--- a/make/photon/Makefile
+++ b/make/photon/Makefile
@@ -17,7 +17,7 @@ WGET=$(shell which wget)
 
 # docker parameters
 DOCKERCMD=$(shell which docker)
-DOCKERBUILD=$(DOCKERCMD) build --pull
+DOCKERBUILD=$(DOCKERCMD) build
 DOCKERRMIMAGE=$(DOCKERCMD) rmi
 DOCKERIMASES=$(DOCKERCMD) images
 
