Make db_name configurable through cfg-file parameter
Signed-off-by: Jarle Bjørgeengen <jarle.bjorgeengen@usit.uio.no>

--- a/make/harbor.cfg
+++ b/make/harbor.cfg
@@ -130,6 +130,9 @@ project_creation_restriction = everyone
 #The address of the Harbor database. Only need to change when using external db.
 db_host = postgresql
 
+#The name of the database to connect to
+db_name = registry
+
 #The password for the root user of Harbor DB. Change this before any production use.
 db_password = root123
 
@@ -138,6 +141,10 @@ db_port = 5432
 
 #The user name of Harbor database
 db_user = postgres
+
+#The sslmode of the database-connection
+db_sslmode = verify-full
+
 
 ##### End of Harbor DB configuration#######
 
