--- a/make/harbor.cfg
+++ b/make/harbor.cfg
@@ -143,7 +143,7 @@ db_port = 5432
 db_user = postgres
 
 #The sslmode of the database-connection
-db_sslmode = verify-full
+db_sslmode = disable
 
 
 ##### End of Harbor DB configuration#######
