Upgrade migrator base os to photon 2.0
Signed-off-by: wang yan <wangyan@vmware.com>

--- a/tools/migration/Dockerfile
+++ b/tools/migration/Dockerfile
@@ -1,10 +1,11 @@
-FROM photon:1.0
+FROM photon:2.0
 
 ENV PGDATA /var/lib/postgresql/data
 
 ## have both mysql and pgsql installed.
 RUN tdnf distro-sync -y \
-    && tdnf install -y sed shadow procps-ng gawk gzip sudo net-tools >> /dev/null\
+    && tdnf remove -y toybox \
+    && tdnf install -y sed shadow procps-ng gawk gzip sudo net-tools glibc-i18n >> /dev/null\
     && groupadd -r -g 10000 mysql && useradd --no-log-init -r -g 10000 -u 10000 mysql \
     && tdnf install -y mariadb-server mariadb mariadb-devel python2 python2-devel python-pip gcc \
     linux-api-headers glibc-devel binutils zlib-devel openssl-devel postgresql >> /dev/null \
