--- a/src/Gopkg.toml
+++ b/src/Gopkg.toml
@@ -115,3 +115,7 @@ ignored = ["github.com/goharbor/harbor/tests*"]
 [[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "=2.1.1"
+
+[[constraint]]
+  name = "github.com/FZambia/sentinel"
+  version = "=1.0.0"
