Add controller to handle oidc login
The controller will redirect user to the OIDC login page based on
configuration.
Additionally this commit add some basic code to wrap `oauth2` package
and `provider` in `go-oidc`, and fixed an issue in UT to make
InMemoryDriver for config management thread-safe.

Signed-off-by: Daniel Jiang <jiangd@vmware.com>

--- a/src/Gopkg.toml
+++ b/src/Gopkg.toml
@@ -113,6 +113,10 @@ ignored = ["github.com/goharbor/harbor/tests*"]
   version = "=1.0"
 
 [[constraint]]
+  name = "github.com/coreos/go-oidc"
+  version = "=2.0.0"
+
+[[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "=2.1.1"
 
